fix: specificy only non-scrolling containers to fix horizontal scrolling

--- a/style/style.css
+++ b/style/style.css
@@ -13,8 +13,8 @@
 }
 
 /* Prevent accidental horizontal scroll */
-html,
-body {
+section, header, footer {
+  overflow-x: clip;  /* modern and safe alternative */
   max-width: 100%;
 }
 
